# content_suite

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md
backend/: pyproject.toml
backend/app/: budget.py  config.py  main.py  observability.py
backend/app/auth/: dependencies.py  supabase_client.py
backend/app/db/: client.py  hydration.py  persistence_rest.py  schemas.sql
backend/app/db/migrations/: 0001_initial_schema.sql  002_extend_content_enums.sql
backend/app/llm/: claude_client.py  langfuse_helpers.py
backend/app/modules/brand_dna/: chunking.py  embedding.py  evaluator.py  orchestrator.py  prompt_loader.py  repair.py  router.py  schemas.py  synthesizer.py  tools.py
backend/app/modules/brand_dna/prompts/: audience_research.md  competitive_scan.md  cultural_context.md  evaluator.md  orchestrator.md  positioning_analysis.md  repair.md  synthesizer.md  trend_analysis.md
backend/app/modules/brand_dna/workers/: __init__.py  audience_research.py  competitive_scan.py  cultural_context.py  positioning_analysis.py  trend_analysis.py
backend/app/modules/creative/: router.py
backend/app/modules/governance/: router.py
backend/scripts/: test_langfuse_nesting.py  test_pipeline.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/e2e/: demo-flow.spec.ts  generate-report.mjs
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: brandDna.ts  client.ts  creative.ts  governance.ts  types.ts
(+20 files in other folders)
