[project]
name = "content-suite-backend"
version = "0.1.0"
description = "Content Suite backend — Brand DNA Architect, Creative Engine, Governance, Observability"
readme = "../README.md"
requires-python = ">=3.11"
authors = [{ name = "Content Suite Team" }]

dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anthropic>=0.40",
    "groq>=0.13",
    "voyageai>=0.3",
    "supabase>=2.9",
    "asyncpg>=0.30",
    "langfuse>=3.0,<5",
    "openinference-instrumentation-anthropic>=0.1.14",
    "structlog>=24.4",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "tenacity>=9.0",
    "pyjwt[crypto]>=2.9",
    "jsonpatch>=1.33",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["S101", "S104"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.sql" = ["ALL"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
